--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.14.2",
+    "@stripe/stripe-js": "^1.44.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +18,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "short-uuid": "^4.2.2",
+    "stripe": "^10.17.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
