--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,12 @@
   },
   "main": "index.js",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.0",
+    "short-uuid": "^4.2.2",
+    "stripe": "^10.17.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
